# MinecraftUUIDConvert

./: .gitignore  README.md  ftbchunks_convert.py  main.py  pyproject.toml  requirements.txt
input/: README.txt
src/minecraft_uuid_convert/: __init__.py  __main__.py  cache.py  cli.py  converter.py  gui.py  services.py  uuid_tools.py
